Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13683

crash in Item_window_func::update_used_tables

Details

    • 10.2.12

    Description

      Version: '10.3.1-MariaDB'  mariadb.org binary distribution
      [ERROR] mysqld got exception 0xc0000005 ;
      mysqld.exe!Item_window_func::update_used_tables()[item_windowfunc.cc:69]
      mysqld.exe!setup_windows()[sql_window.cc:319]
      mysqld.exe!setup_without_group()[sql_select.cc:666]
      mysqld.exe!JOIN::prepare()[sql_select.cc:816]
      mysqld.exe!mysql_select()[sql_select.cc:3715]
      mysqld.exe!handle_select()[sql_select.cc:366]
      mysqld.exe!execute_sqlcom_select()[sql_parse.cc:6476]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:3730]
      mysqld.exe!mysql_parse()[sql_parse.cc:7935]
      mysqld.exe!dispatch_command()[sql_parse.cc:1821]
      mysqld.exe!do_command()[sql_parse.cc:1369]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:346]
      mysqld.exe!tp_callback()[threadpool_common.cc:192]
      

      How to repeat
      ------------------

      drop table if exists t;
      create table t (a int) engine=innodb;
      select a from t having ntile(1)over w1;
      

      Attachments

        Issue Links

          Activity

            Thanks for the report.

            elenst Elena Stepanova added a comment - Thanks for the report.

            Hi Igor!

            Can you please review a patch that fixes this issue?

            http://lists.askmonty.org/pipermail/commits/2017-December/011770.html

            Vicențiu

            cvicentiu Vicențiu Ciorbaru added a comment - Hi Igor! Can you please review a patch that fixes this issue? http://lists.askmonty.org/pipermail/commits/2017-December/011770.html Vicențiu

            People

              cvicentiu Vicențiu Ciorbaru
              sbester1 sbester1
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.