MDEV-13683: crash in Item_window_func::update_used_tables

Window functions can be defined (illegaly) in the HAVING clause. Window
functions in the having clause can reference window names. We must
resolve window names before we are able to call setup_windows.
Window name resolution happens at fix_field time. To ensure all items
have been fixed, we must move the setup_windows call after fixing the
having item too.